@@ -195,7 +195,6 @@ lib/npg_testing/html.pm
 lib/npg_testing/intweb.pm
 lib/npg_tracking/daemon.pm
 lib/npg_tracking/daemon/jenkins.pm
-lib/npg_tracking/daemon/samplesheet.pm
 lib/npg_tracking/daemon/staging.pm
 lib/npg_tracking/daemon/staging_local.pm
 lib/npg_tracking/data/bait.pm
@@ -383,7 +382,6 @@ t/14-dbic-RunStatusDict.t
 t/14-dbic-Tag.t
 t/14-dbic-User.t
 t/16-npg_tracking-daemon-jenkins.t
-t/16-npg_tracking-daemon-samplesheet.t
 t/16-npg_tracking-daemon-staging.t
 t/16-npg_tracking-daemon.t
 t/20-model-run_and_instrument_status.t
